# Chameleon

./: .coverage  .gitignore  .gitlab-ci.yml  .gitmodules  Chameleon 2.spec  Chameleon.spec  Chameleon2.spec  Chameleon2Mac.spec  Chameleon2WinLinux.spec  ChameleonMac.spec  ChameleonWinLinux.spec  LICENSE  ProgressBar.py  ProgressBarUI.py  README.md  chameleon.icns  chameleonbeta.icns  conftest.py  core-requirements.txt  design.ui  initialize.py  main.py  main.spec  main_test.py  pyinstaller_entry.py  pyproject.toml  q.py  qt-requirements.txt  requirements.txt  setup.py  setup.sh  test-requirements.txt  test_main.py  version_writer.py  web-requirements.txt
.github/workflows/: ci.yml
chameleon/: __init__.py  core.py  design.ui  main.py  path.py  qlineeditdragdrop.py
chameleon/chameleon-frontend/: .eslintcache  README.md  package-lock.json  package.json
chameleon/flask/: README.md  app.py  index.html  main.js  run.py  web.py
chameleon2/: OSMtag.yaml  ProgressBar.py  ProgressBarUI.py  design.ui  main.py
resources/: extracolumns.yaml
src/: ProgressBar.py  design.ui  main.py
test/: BLZ_MTPST_2020_02_03.csv  BLZ_allroads_2020_02_03.csv  BLZ_allroads_2020_02_27.csv  conftest.py  new.csv  new_highdeletions.csv  new_nohighway.csv  new_noname.csv  old.csv  old_nohighway.csv  old_noname.csv  output_name.csv  test_core.py  test_counter.yaml  test_favorites.yaml  test_grouped_q_output.yaml  test_grouped_q_output_nohighway.yaml  test_main.py  test_qt.py  test_ungrouped_q_output.yaml  test_ungrouped_q_output_nohighway.yaml  test_web.py  way389652224.json  way796424739.json
(+50 files in other folders)
