[tool.poetry]
name = "chameleon"
version = "3.6.2"
description = ""
authors = ["Evan Derickson <evan.derickson@kaart.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
appdirs = "^1.4.4"
geojson = "^2.5.0"
more-itertools = "^8.14.0"
overpass = { git = "https://github.com/KaartGroup/overpass-api-python-wrapper", branch = "kaart_addons" }
pandas = "^1.4.3"
PyYAML = "^6.0"
requests = "^2.28.1"
requests-cache = "^1.0.0a2"
XlsxWriter = "^3.0.3"

[tool.poetry.group.qt.dependencies]
bidict = "^0.22.0"
pyinstaller = "^5.3"
PySide6 = "^6.3.1"


[tool.poetry.group.web.dependencies]
celery = "^5.2.7"
Flask = "^2.2.2"
gevent = "^21.12.0"
gunicorn = "^20.1.0"
redis = "^4.3.4"
SQLAlchemy = "^1.4.40"
Werkzeug = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.6.0", allow-prereleases = true }
GitPython = "^3.1.27"
ptvsd = "^4.3.2"
pytest = "^7.1.2"
pytest-qt = "^4.1.0"
requests-mock = { extras = ["fixture"], version = "^1.9.3" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
